# eckSnapshot

./: .eck-token-training.json  .eckignore  .ecksnapshot.config.js  .env.example  .gitignore  AGENTS.md  AI_INTEGRATION.md  ARCHITECT_APPROVAL_REQUEST.md  ARCHITECT_APPROVAL_REQUEST_v2.md  CLAUDE.md  COMMANDS_REFERENCE.md  ECK_SNAPSHOT_IMPROVEMENTS.md  JA_README.md  MINIMAX_INTEGRATION.md  MINIMAX_STANDALONE.md  OPENCODE_SETUP.md  README.md  RELEASE_NOTES_v5.0.3.md  STRATEGY_CLARIFICATION.md  codex_delegation_snapshot.md  consilium_request.json  create-github-release.sh  daemon_log.txt  deploy_telemetry.sh  ecksnapshot-context.md  ecksnapshot.config.js  embedding.service.js  hvis-implementation-plan.js  ideas.md  index.js  knexfile.js  opencode.json  package-lock.json  package.json  setup.json  setup.json.bak  temp_journal_entry  test-minimax.sh  test_deletion_debug.js  test_for_deletion.js  (+6 more)
.claude/: settings.local.json
.eck/: AnswerToSA.md  CONTEXT.md  INTEGRATION_MINIMAX.md  JOURNAL.md  OPERATIONS.md  ROADMAP.md  TECH_DEBT.md
.opencode/: mcp.json
create-snapshot/: .gitignore
docs/: minimax-change-api-key.md  minimax-quickref.md  minimax-standalone-setup.md  zai-change-api-key.md  zai-quickref.md
eck-telemetry/: Cargo.toml  README.md
eck-telemetry/src/: db.rs  handlers.rs  main.rs  models.rs
scripts/: mcp-eck-core.js  mcp-glm-zai-worker.mjs  mcp-minimax-worker.js  verify_changes.js
snapshots/: create-snapshot_snapshot_2025-09-17_23-08-09.md  eckSnapshot_snapshot_2025-09-14_20-06-49_7649ae3.md  eckSnapshot_snapshot_2025-09-14_20-25-24_ef5fd84.md  (+8 more)
(+86 files in other folders)
